do something on the app